# tickstream

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: dev.md
include/tickstream/: consumer.hpp  library.h  params.hpp  producer.hpp  producer_new.hpp  ring_buffer.hpp  ring_bufffer.hpp  stream.hpp  stream_gen.hpp  stream_manager.hpp  stream_new.hpp  tick.hpp
include/tickstream/detail/: rng.h
src/: main.cpp  single_stream.cpp
tests/tickstream/: test_consumer.cpp  test_tick.cpp
